Clean up SonarCloud code smells: unused imports, Stream.toList(), commented-out code